syntax = "proto3";

option csharp_namespace = "Bookstore";

service Inventory {
	rpc GetBookById(BookByIdRequest) returns (BookResponse);
	rpc GetBookList(BookListRequest) returns(BookListResponse);
	rpc AddBook(BookRequest) returns (BookResponse);
	rpc EditBook(BookRequest) returns (BookResponse);
}

message BookResponse {
	int32 book_id = 1;
	string title = 2;
	string author = 3;
	string isbn = 4;
	int32 year = 5;
}

message BookRequest {
	BookResponse book = 1;
}

message BookListResponse {
	repeated BookResponse books = 1;
}

message BookListRequest {}

message BookByIdRequest {
	int32 book_id = 1;
}